<resources>
    <string name="app_name">Portfolio Taits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Тайц Юлия Максимовна</string>
    <string name="nav_header_subtitle">iojibka_2000@mail.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_aboutme">Обо мне</string>
    <string name="menu_education">Моя учёба</string>
    <string name="menu_plans">Мои планы</string>
    <string name="menu_contacts">Контакты</string>
    <string name="my_name">Тайц Юлия Максимовна</string>
    <string name="birthdate">Дата рождения</string>
    <string name="my_birthdate">14.07.2000</string>
    <string name="aboutme">Обо мне</string>
    <string name="aboutme_text">Меня зовут Юля. Я учусь на третьем курсе Университета ИТМО на факультете \"Программной инженерии и компьютерной техники\". Моя программа \"Нейротехнологии и программирование\".</string>
    <string name="zodiak">Знак зодиака</string>
    <string name="my_zodiak">Рак</string>
    <string name="gender">Пол</string>
    <string name="my_gender">Женский</string>
    <string name="plans">В мои основные планы на ближайшее будущее входит успешно закрыть зимнюю сессию. А ещё очень хочется спать.</string>
    <string name="email">Электронная почта</string>
    <string name="my_email">iojibka_2000@mail.ru</string>
    <string name="phone">Телефон</string>
    <string name="my_phone">+79817477744</string>
</resources>