<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutme"
            android:icon="@drawable/ic_application"
            android:title="@string/menu_aboutme" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_mortarboard"
            android:title="@string/menu_education" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_pencil"
            android:title="@string/menu_plans" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contacts" />
    </group>
</menu>