<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_aboutme">

    <fragment
        android:id="@+id/nav_aboutme"
        android:name="com.taits.portfoliotaits.ui.aboutme.AboutMeFragment"
        android:label="@string/menu_aboutme"
        tools:layout="@layout/fragment_aboutme" />

    <fragment
        android:id="@+id/nav_education"
        android:name="com.taits.portfoliotaits.ui.education.EducationFragment"
        android:label="@string/menu_education"
        tools:layout="@layout/fragment_education" />

    <fragment
        android:id="@+id/nav_plans"
        android:name="com.taits.portfoliotaits.ui.plans.PlansFragment"
        android:label="@string/menu_plans"
        tools:layout="@layout/fragment_plans" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.taits.portfoliotaits.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_plans" />
</navigation>