<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutme.AboutMeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/me"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:src="@drawable/thisisme"
            android:scaleType="centerCrop"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/my_name"
            android:lines="2"
            android:text="@string/my_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/me"
            app:layout_constraintTop_toTopOf="@id/me"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            app:layout_constraintStart_toEndOf="@+id/me"
            app:layout_constraintTop_toBottomOf="@+id/my_name"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/my_birthdate"
            android:text="@string/my_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/birthdate"
            app:layout_constraintTop_toBottomOf="@+id/birthdate"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            app:layout_constraintStart_toEndOf="@+id/me"
            app:layout_constraintTop_toBottomOf="@+id/my_birthdate"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/my_gender"
            android:text="@string/my_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/gender"
            app:layout_constraintTop_toBottomOf="@+id/gender"/>

        <TextView
            android:id="@+id/zodiak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zodiak"
            app:layout_constraintStart_toEndOf="@+id/me"
            app:layout_constraintTop_toBottomOf="@+id/my_gender"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/my_zodiak"
            android:text="@string/my_zodiak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/zodiak"
            app:layout_constraintTop_toBottomOf="@+id/zodiak"/>

        <TextView
            android:id="@+id/aboutme_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/me"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/aboutme"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/overview_text"
            android:text="@string/aboutme_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/aboutme_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
